--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
+    "file-saver": "^2.0.5",
     "http-digest-auth": "^0.1.3",
     "isomorphic-fetch": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
