--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.8",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
+    "file-saver": "^2.0.5",
     "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
