--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "digest-fetch": "^3.1.1",
     "dotenv": "^16.4.5",
