--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@ CLIENT_ID=2f9eacdf-7d35-4dfc-a9ab-781ba2ebef3d
 CLIENT_SECRET=SA~8Q~bjbi3iws.jGRybqwJRcgaIZ1.mQQbaEbRE
 TENANT_ID=653b7f37-392c-416b-b3f0-34859ed6d6eb
 AZURE_GROUP_IDS=dd475730-881b-4c7e-8c8b-13f2160da442,989da314-610e-4be4-9f67-1d6d63e2fc34
-MONGO_URI=mongodb://172.16.20.253:27017/inventory
+MONGO_URI=mongodb://localhost:27017/inventory
 PORT=5001
 JWT_SECRET=wellspring
-REACT_APP_API_URL=http://172.16.20.135:5001
+REACT_APP_API_URL=http://localhost:5001
