--- a/package.json
+++ b/package.json
@@ -8,15 +8,25 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.8",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "docxtemplater": "^3.55.8",
     "file-saver": "^2.0.5",
+    "fs": "^0.0.1-security",
+    "fuse": "^0.12.1",
+    "fuse.js": "^7.0.0",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
+    "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
+    "pizzip": "^3.1.7",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.0.1",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.3",
