--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.1",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,19 +14,24 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
-    "docxtemplater": "^3.55.8",
+    "docxtemplater": "^3.57.2",
     "file-saver": "^2.0.5",
     "fs": "^0.0.1-security",
     "fuse": "^0.12.1",
     "fuse.js": "^7.0.0",
+    "i18next": "^24.2.1",
+    "i18next-browser-languagedetector": "^8.0.2",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "lodash": "^4.17.21",
+    "mammoth": "^1.9.0",
     "multer": "^1.4.5-lts.1",
+    "pdfjs-dist": "^3.11.174",
     "pizzip": "^3.1.7",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.0",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.0.1",
@@ -64,6 +71,7 @@
     "@tailwindcss/forms": "^0.5.9",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15"
+    "tailwindcss": "^3.4.15",
+    "typescript": "^4.9.5"
   }
 }
