--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "passport": "^0.7.0",
     "passport-azure-ad": "^4.3.5",
     "react-select": "^5.8.3",
+    "react-switch": "^7.1.0",
     "simple-oauth2": "^5.1.0",
     "swiper": "^11.2.1",
     "xlsx": "^0.18.5"
