--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=https://staff-portal.wellspring.edu.vn/api
-REACT_APP_UPLOAD_URL=https://staff-portal.wellspring.edu.vn/uploads
-REACT_APP_URL=https://staff-portal.wellspring.edu.vn
+REACT_APP_API_URL=https://360wiser.wellspring.edu.vn/api
+REACT_APP_UPLOAD_URL=https://360wiser.wellspring.edu.vn/uploads
+REACT_APP_URL=https://360wiser.wellspring.edu.vn
 REACT_APP_ENV=production
