--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@react-spring/web": "^9.7.5",
     "@shadcn/ui": "^0.0.4",
+    "@splidejs/splide": "^4.1.4",
+    "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "@tanstack/react-table": "^8.20.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
     "apexcharts": "^4.4.0",
     "axios": "^1.7.8",
     "bcryptjs": "^2.4.3",
