--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apexcharts": "^4.4.0",
     "axios": "^1.7.8",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
@@ -42,6 +43,7 @@
     "radix-ui": "^1.1.3",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
+    "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
