--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "inventory",
-  "version": "0.1.0",
+  "name": "360wisers",
+  "version": "2.0",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.1",
@@ -56,6 +56,7 @@
     "react-slick": "^0.30.3",
     "react-switch": "^7.1.0",
     "react-toastify": "^10.0.6",
+    "react-typed": "^2.0.12",
     "scrolltrigger": "^1.0.1",
     "shimmer-effects-react": "^1.0.4",
     "slick-carousel": "^1.8.1",
@@ -66,10 +67,11 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "serve": "vite preview",
+    "start": "vite"
   },
   "eslintConfig": {
     "extends": [
@@ -92,14 +94,18 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@tailwindcss/forms": "^0.5.9",
-    "autoprefixer": "^10.4.20",
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.21",
     "crypto-browserify": "^3.12.1",
     "html-webpack-plugin": "^5.6.3",
-    "postcss": "^8.5.1",
+    "postcss": "^8.5.3",
     "react-scripts": "^5.0.1",
     "source-map-loader": "^5.0.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^4.9.5",
+    "vite": "^4.5.9",
+    "vite-plugin-obfuscator": "^1.0.5",
+    "vite-plugin-svgr": "^4.3.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
