--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@azure/identity": "^4.8.0",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "adm-zip": "^0.5.16",
     "axios": "^1.7.8",
@@ -26,12 +27,15 @@
     "express-validator": "^7.2.0",
     "file-saver": "^2.0.5",
     "http-digest-auth": "^0.1.3",
+    "imap-simple": "^5.1.0",
     "isomorphic-fetch": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.8.4",
+    "msal": "^1.4.18",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-azure-ad": "^4.3.5",
     "react-select": "^5.8.3",
@@ -39,6 +43,7 @@
     "sharp": "^0.33.5",
     "simple-oauth2": "^5.1.0",
     "swiper": "^11.2.1",
+    "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
