--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
     "file-saver": "^2.0.5",
+    "html-to-text": "^9.0.5",
     "http-digest-auth": "^0.1.3",
     "imap-simple": "^5.1.0",
     "isomorphic-fetch": "^3.0.0",
@@ -42,6 +43,7 @@
     "react-switch": "^7.1.0",
     "sharp": "^0.33.5",
     "simple-oauth2": "^5.1.0",
+    "socket.io": "^4.8.1",
     "swiper": "^11.2.1",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
