--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "scrolltrigger": "^1.0.1",
     "shimmer-effects-react": "^1.0.4",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.2.5",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
