--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.1",
+    "@heroicons/react": "^1.0.6",
     "@react-spring/web": "^9.7.5",
     "@shadcn/ui": "^0.0.4",
     "@splidejs/splide": "^4.1.4",
@@ -44,6 +45,7 @@
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
     "react-chartjs-2": "^5.3.0",
+    "react-curved-text": "^3.0.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
