--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "mammoth": "^1.9.0",
     "multer": "^1.4.5-lts.1",
     "pizzip": "^3.1.7",
+    "prettier": "^3.5.3",
     "radix-ui": "^1.1.3",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
@@ -53,6 +54,7 @@
     "react-icons": "^5.4.0",
     "react-modal": "^3.16.3",
     "react-pageflip": "^2.0.3",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.0.1",
     "react-select": "^5.8.3",
     "react-slick": "^0.30.3",
