--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,2 +1,44 @@
+# Dependencies
 node_modules/
-node_modules/
+package-lock.json
+yarn.lock
+
+# Build output
+dist/
+build/
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+.env.development
+.env.test
+.env.production
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Testing
+coverage/
+
+# Cache
+.cache/
+.eslintcache
+
+# Misc
+.DS_Store
+Thumbs.db
+
+# Temporary files
+tmp/
+temp/
