--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,18 +18,30 @@
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
+    "axios": "^1.9.0",
     "expo": "^53.0.9",
     "expo-auth-session": "~6.1.5",
+    "expo-av": "^15.1.4",
+    "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.1.8",
+    "expo-device": "~7.1.4",
+    "expo-document-picker": "~13.1.5",
     "expo-font": "~13.3.1",
+    "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.4",
+    "expo-notifications": "~0.31.2",
     "expo-random": "^14.0.1",
+    "expo-server-sdk": "^3.15.0",
     "expo-status-bar": "~2.2.3",
     "jwt-decode": "^4.0.0",
     "nativewind": "latest",
     "react": "19.0.0",
     "react-hook-form": "^7.56.3",
     "react-native": "0.79.2",
+    "react-native-actions-sheet": "^0.9.7",
     "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
@@ -37,9 +49,7 @@
     "react-native-svg": "^15.12.0",
     "react-native-vector-icons": "^10.2.0",
     "socket.io-client": "^4.8.1",
-    "yup": "^1.6.1",
-    "expo-image-picker": "~16.1.4",
-    "expo-document-picker": "~13.1.5"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
