--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
@@ -27,12 +28,14 @@
     "expo-device": "~7.1.4",
     "expo-document-picker": "~13.1.5",
     "expo-font": "~13.3.1",
+    "expo-image-manipulator": "^13.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.4",
     "expo-notifications": "~0.31.2",
     "expo-random": "^14.0.1",
     "expo-server-sdk": "^3.15.0",
     "expo-status-bar": "~2.2.3",
+    "expo-updates": "~0.28.13",
     "jwt-decode": "^4.0.0",
     "nativewind": "latest",
     "react": "19.0.0",
@@ -48,6 +51,7 @@
     "react-native-screens": "~4.10.0",
     "react-native-svg": "^15.12.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.13.5",
     "socket.io-client": "^4.8.1",
     "yup": "^1.6.1"
   },
