--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "digest-fetch": "^3.1.1",
     "dotenv": "^16.4.5",
+    "expo-server-sdk": "^3.15.0",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
