--- a/mobile/package.json
+++ b/mobile/package.json
@@ -43,13 +43,16 @@
     "react-native": "0.79.2",
     "react-native-actions-sheet": "^0.9.7",
     "react-native-dotenv": "^3.4.11",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-image-viewing": "^0.2.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "^15.12.0",
+    "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.13.5",
     "socket.io-client": "^4.8.1",
