--- a/mobile/package.json
+++ b/mobile/package.json
@@ -2,8 +2,8 @@
   "name": "my-expo-app",
   "version": "1.0.0",
   "scripts": {
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "start": "expo start",
     "prebuild": "expo prebuild",
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" && prettier -c \"**/*.{js,jsx,ts,tsx,json}\"",
@@ -23,6 +23,7 @@
     "expo": "^53.0.9",
     "expo-auth-session": "~6.1.5",
     "expo-av": "^15.1.4",
+    "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
     "expo-dev-client": "~5.1.8",
     "expo-device": "~7.1.4",
@@ -31,8 +32,10 @@
     "expo-image-manipulator": "^13.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.4",
+    "expo-local-authentication": "^16.0.4",
     "expo-notifications": "~0.31.2",
     "expo-random": "^14.0.1",
+    "expo-secure-store": "^14.2.3",
     "expo-server-sdk": "^3.15.0",
     "expo-status-bar": "~2.2.3",
     "expo-updates": "~0.28.13",
@@ -56,8 +59,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.13.5",
     "socket.io-client": "^4.8.1",
-    "yup": "^1.6.1",
-    "expo-blur": "~14.1.4"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
