--- a/backend/package.json
+++ b/backend/package.json
@@ -44,6 +44,7 @@
     "passport-azure-ad": "^4.3.5",
     "react-select": "^5.8.3",
     "react-switch": "^7.1.0",
+    "redis": "^5.1.0",
     "sharp": "^0.33.5",
     "simple-oauth2": "^5.1.0",
     "socket.io": "^4.8.1",
