--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "WellWorkspace",
+    "name": "Wello",
     "slug": "workspace",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "web": {
       "favicon": "./src/assets/favicon.png"
     },
