--- a/mobile/package.json
+++ b/mobile/package.json
@@ -29,7 +29,7 @@
     "expo-device": "~7.1.4",
     "expo-document-picker": "~13.1.5",
     "expo-font": "~13.3.1",
-    "expo-image-manipulator": "^13.1.7",
+    "expo-image-manipulator": "~13.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.4",
     "expo-local-authentication": "^16.0.4",
@@ -49,6 +49,7 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-image-viewing": "^0.2.2",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "~3.17.4",
