--- a/mobile/package.json
+++ b/mobile/package.json
@@ -37,6 +37,7 @@
     "expo-random": "^14.0.1",
     "expo-secure-store": "^14.2.3",
     "expo-server-sdk": "^3.15.0",
+    "expo-splash-screen": "^0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-updates": "~0.28.13",
     "jwt-decode": "^4.0.0",
