--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,6 +14,7 @@
     "@expo/vector-icons": "^14.1.0",
     "@hookform/resolvers": "^5.0.1",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/slider": "4.5.6",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
@@ -48,7 +49,7 @@
     "react-native-actions-sheet": "^0.9.7",
     "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-gesture-handler": "^2.25.0",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-image-viewing": "^0.2.2",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-linear-gradient": "^2.8.3",
@@ -56,7 +57,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "react-native-svg": "^15.12.0",
+    "react-native-svg": "15.11.2",
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.13.5",
@@ -67,7 +68,7 @@
     "@babel/core": "^7.20.0",
     "@react-native-community/cli": "latest",
     "@types/lodash.debounce": "^4.0.9",
-    "@types/react": "~19.0.10",
+    "@types/react": "^18.3.22",
     "@types/react-native-vector-icons": "^6.4.18",
     "eslint": "^9.25.1",
     "eslint-config-expo": "^9.2.0",
