--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js",
-    "start": "node app.js"
+    "dev": "nodemon --max-old-space-size=4096 app.js",
+    "start": "node --max-old-space-size=4096 app.js"
   },
   "keywords": [],
   "author": "",
