--- a/frontend/package.json
+++ b/frontend/package.json
@@ -73,7 +73,8 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "node --max-old-space-size=4096 ./node_modules/.bin/vite build",
+    "build:low-mem": "node --max-old-space-size=2048 ./node_modules/.bin/vite build",
     "preview": "vite preview",
     "serve": "vite preview",
     "start": "vite"
