--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-VITE_API_URL=http://localhost:5001/api
-VITE_UPLOAD_URL=http://localhost:5001/uploads
-VITE_URL=http://localhost:5001
+VITE_API_URL=https://360wiser.wellspring.edu.vn/api
+VITE_UPLOAD_URL=https://360wiser.wellspring.edu.vn/uploads
+VITE_URL=https://360wiser.wellspring.edu.vn/
 VITE_CDN=https://cdn.360wiser.wellspring.edu.vn
