--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,6 @@ MONGO_URI=mongodb://172.16.20.253:27017/inventory
 PORT=5001
 JWT_SECRET=wellspring
 REACT_APP_API_URL=http://172.16.20.153:5001
+AZURE_CLIENT_ID=2f9eacdf-7d35-4dfc-a9ab-781ba2ebef3d
+AZURE_CLIENT_SECRET=SA~8Q~bjbi3iws.jGRybqwJRcgaIZ1.mQQbaEbRE
+AZURE_TENANT_ID=653b7f37-392c-416b-b3f0-34859ed6d6eb
