--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,71 +4,29 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.1",
-    "@heroicons/react": "^1.0.6",
-    "@react-spring/web": "^9.7.5",
-    "@shadcn/ui": "^0.0.4",
-    "@splidejs/splide": "^4.1.4",
-    "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "@tanstack/react-table": "^8.20.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "animate.css": "^4.1.1",
-    "apexcharts": "^4.4.0",
     "axios": "^1.7.8",
-    "bcryptjs": "^2.4.3",
-    "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cors": "^2.8.5",
-    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
-    "docxtemplater": "^3.57.2",
-    "file-saver": "^2.0.5",
-    "framer-motion": "^11.18.0",
-    "fs": "^0.0.1-security",
-    "fuse": "^0.12.1",
-    "fuse.js": "^7.0.0",
-    "gsap": "^3.12.7",
-    "i18next": "^23.2.3",
-    "i18next-browser-languagedetector": "^8.0.2",
-    "jspdf": "^2.5.2",
-    "jspdf-autotable": "^3.8.4",
     "jwt-decode": "^4.0.0",
-    "locomotive-scroll": "^4.1.4",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.474.0",
-    "mammoth": "^1.9.0",
-    "multer": "^1.4.5-lts.1",
     "pizzip": "^3.1.7",
     "prettier": "^3.5.3",
-    "radix-ui": "^1.1.3",
     "react": "^18.3.1",
-    "react-apexcharts": "^1.7.0",
-    "react-chartjs-2": "^5.3.0",
-    "react-curved-text": "^3.0.1",
-    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.54.2",
-    "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
-    "react-modal": "^3.16.3",
     "react-pageflip": "^2.0.3",
-    "react-quill": "^2.0.0",
     "react-router-dom": "^7.0.1",
-    "react-select": "^5.8.3",
-    "react-slick": "^0.30.3",
     "react-switch": "^7.1.0",
     "react-toastify": "^10.0.6",
     "react-typed": "^2.0.12",
-    "scrolltrigger": "^1.0.1",
-    "shimmer-effects-react": "^1.0.4",
-    "socket.io-client": "^4.8.1",
-    "swiper": "^11.2.5",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "dev": "vite",
